use trim().isEmpty() vs isBlank() (j8 compt)